--- a/.github/workflows/enforce-label.yml
+++ b/.github/workflows/enforce-label.yml
@@ -1,13 +1,13 @@
-name: Enforce PR label
-
-on:
-  pull_request:
-    types: [labeled, unlabeled, opened, edited, synchronize]
-
 jobs:
   enforce-label:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
-    - uses: yogevbd/enforce-label-action@2.2.2
+    - continue-on-error: true
+      uses: yogevbd/enforce-label-action@2.2.2
       with:
-        REQUIRED_LABELS_ANY: "type: accepted/bug,type: accepted/enhancement,Infrastructure,type: documentation,skip-changelog"
+        REQUIRED_LABELS_ANY: 'type: accepted/bug,type: accepted/enhancement,Infrastructure,type:
+          documentation,skip-changelog'
+name: Enforce PR label
+on:
+  repository_dispatch:
+    types: trigger-ga___enforce-label.yml
